--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.15.0/matter.min.js"
 		integrity="sha512-zbys69L/QzU+IIRLUIMXpYidZQk85uqm1kc70CQltVQ+bRHhxPPyQEb3+xezs0gNP+L+HpR8lGFuc129yE+mBA=="
 		crossorigin="anonymous"></script>
-	<title>Document</title>
+	<title>Maze Game</title>
 	<style>
 		.hidden {
 			display: none !important;
